<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="264dp"
        android:layout_height="56dp"
        android:ems="50"
        android:inputType="text"
        android:text="@string/poi_name_text"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_margin="10dp"
        android:layout_width="181dp"
        android:layout_height="59dp"/>

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/ratingBarText"
            android:layout_margin="15dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="20sp"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:isIndicator="false"
            android:layout_margin="10dp"
            android:numStars="5" />

    </LinearLayout>
    <TextView
        android:id="@+id/addImageText"
        android:layout_margin="15dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image_header"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/poi_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_image_button" />

    <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/poi_submit_button" />
</LinearLayout>
