<resources>
    <string name="app_name">FindMy</string>
    <string name="app_name_stylized">Find A *</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_marketplace">Marketplace</string>
    <string name="profile_sign_out_button_label">Sign Out</string>
    <string name="desc_add_poi_button">Add POI</string>

    <string-array name="POI_filter_choices">
        <item>All</item>
        <item>Study Space</item>
        <item>Microwave</item>
        <item>Washroom</item>
        <item>myPOI</item>
    </string-array>
    <string-array name="new_poi_choices">
        <item>Study Space</item>
        <item>Microwave</item>
        <item>Washroom</item>
        <item>myPOI</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_poi">Add POI</string>
    <string name="rating">Rating</string>
    <string name="poi_name_text">POI Name</string>
    <string name="poi_submit_button">Submit</string>
    <string name="find_friend_field">Search Friends</string>
    <string name="friends_list_text_button">View</string>
    <string name="mapBux">mapBux</string>
    <string name="get_mapbux">Get MapBux</string>
    <string name="marketplaceDetails">Details</string>
    <string name="placeholder">Placeholder</string>
    <string name="edit_rating">Edit Rating</string>
    <string name="submit">Submit</string>
    <string name="current_rating">Current Rating</string>
    <string name="your_mypoi">Your myPOIs</string>
    <string name="listing_price">Listing Price</string>
    <string name="purchase">Purchase</string>
    <string name="owner_name">Owner</string>
    <string name="unlist">Unlist</string>
    <string name="current_listing_price">Current Listing Price</string>
    <string name="list_on_marketplace">List On Marketplace</string>
    <string name="your_user">Username</string>
    <string name="add_friend_field">Add a friend by email</string>
    <string name="add_friend_button_text">Add</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="report_poi">Report POI</string>
    <string name="your_email">Your Email</string>
    <string name="report_friend">Report</string>
    <string name="your_reliability_score">Your Reliability Score</string>
    <string name="poi_type_header">POI Type</string>
    <string name="poi_owner_header">Owner</string>
    <string name="add_image_button">Change Image</string>
    <string name="add_image_header">POI Image</string>
    <string name="view_image">View Image</string>
    <string name="err_no_img">Image could not be fetched</string>
    <string name="friend_pending">Pending</string>
    <string name="poi_id_header">POI ID</string>
    <string name="err_missing_img">Error! Please upload an image</string>
</resources>