<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_poi_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >

    <View
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/poi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/placeholder"
        android:textSize="30sp" />
    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/poi_id_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/poi_id_header"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/poi_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/placeholder"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/poi_type_header"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/poi_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/placeholder"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/poi_owner_header"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/poi_owner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/placeholder"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_rating_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentRatingHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/current_rating"
            android:textSize="25sp" />

        <RatingBar
            android:id="@+id/currentRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:isIndicator="true"
            android:numStars="5" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/editRatingLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/edit_rating"
                android:textSize="25sp" />

            <RatingBar
                android:id="@+id/editRatingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:isIndicator="false"
                android:numStars="5" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/rating_submit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/submit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/viewImageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/view_image"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/reportButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/report_poi"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>